--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "firebase": "^12.1.0",
     "nanoid": "^5.1.5",
     "next": "15.5.0",
     "pusher": "^5.2.0",
